--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,22 +7,20 @@
 	"name": "tweeter",
 	"main": "src/index.js",
 	"compatibility_date": "2025-06-20",
-	"migrations": [
-		{
-			"new_sqlite_classes": [
-				"MyDurableObject"
-			],
-			"tag": "v1"
-		}
-	],
-	"durable_objects": {
-		"bindings": [
-			{
-				"class_name": "MyDurableObject",
-				"name": "MY_DURABLE_OBJECT"
-			}
-		]
-	},
+        "migrations": [
+                {
+                        "new_classes": ["PusherDO"],
+                        "tag": "v1"
+                }
+        ],
+        "durable_objects": {
+                "bindings": [
+                        {
+                                "class_name": "PusherDO",
+                                "name": "PUSHER"
+                        }
+                ]
+        },
 	"observability": {
 		"enabled": true
 	}
@@ -43,7 +41,11 @@
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
-	// "vars": { "MY_VARIABLE": "production_value" },
+        "vars": {
+                "PUSHER_APP_ID": "your-app-id",
+                "PUSHER_APP_KEY": "your-app-key",
+                "PUSHER_APP_SECRET": "your-secret"
+        },
 	/**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
